Fix StorageService and VerificationService integration to support tamper detection with Cloudinary