@@ -1,79 +1,81 @@
 package com.docuverify.service;
 
+import com.cloudinary.Cloudinary;
+import com.cloudinary.utils.ObjectUtils;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import software.amazon.awssdk.core.ResponseInputStream;
-import software.amazon.awssdk.core.sync.RequestBody;
-import software.amazon.awssdk.services.s3.S3Client;
-import software.amazon.awssdk.services.s3.model.*;
 
-import java.io.IOException;
 import java.io.InputStream;
-import java.nio.file.*;
+import java.net.URL;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.HexFormat;
-import java.util.UUID;
+import java.util.Map;
 
 @Service
 @Slf4j
 public class StorageService {
 
-    private final S3Client s3Client;
+    private final Cloudinary cloudinary;
 
-    @Value("${storage.mode:local}")
-    private String storageMode;
-
-    @Value("${storage.local.upload-dir:./uploads}")
-    private String uploadDir;
-
-    @Value("${aws.s3.bucket:docuverify-documents}")
-    private String s3Bucket;
-
-    // ✅ OPTIONAL injection (key fix)
-    public StorageService(@Autowired(required = false) S3Client s3Client) {
-        this.s3Client = s3Client;
+    public StorageService(Cloudinary cloudinary) {
+        this.cloudinary = cloudinary;
     }
 
-    // ── Public API ───────────────────────────────────────────────────────────
+    // ✅ Upload file to Cloudinary
+    public String uploadFile(MultipartFile file, String institutionId) {
+        try {
+            Map uploadResult = cloudinary.uploader().upload(
+                    file.getBytes(),
+                    ObjectUtils.asMap(
+                            "folder", "docuverify/" + institutionId,
+                            "resource_type", "auto"
+                    )
+            );
 
-    public String uploadFile(MultipartFile file, String institutionId) throws IOException {
-        String extension = getExtension(file.getOriginalFilename());
-        String storedName = UUID.randomUUID() + extension;
+            String url = uploadResult.get("secure_url").toString();
+            log.info("File uploaded to Cloudinary: {}", url);
 
-        if (isS3()) {
-            return uploadToS3(file, institutionId, storedName);
-        } else {
-            return uploadToLocal(file, institutionId, storedName);
+            return url;
+
+        } catch (Exception e) {
+            throw new RuntimeException("File upload failed", e);
         }
     }
 
+    // ✅ Delete file (optional)
     public void deleteFile(String fileUrl) {
-        if (isS3()) {
-            deleteFromS3(fileUrl);
-        } else {
-            deleteFromLocal(fileUrl);
+        try {
+            String publicId = extractPublicId(fileUrl);
+
+            cloudinary.uploader().destroy(
+                    publicId,
+                    ObjectUtils.emptyMap()
+            );
+
+            log.info("Deleted from Cloudinary: {}", publicId);
+
+        } catch (Exception e) {
+            log.error("Failed to delete file", e);
         }
     }
 
-    public byte[] readFileBytes(String fileUrl) throws IOException {
-        if (isS3()) {
-            return readFromS3(s3KeyFromUrl(fileUrl));
-        } else {
-            String relativePath = fileUrl.replace("/api/files/", "");
-            Path filePath = Paths.get(uploadDir, relativePath);
-            return Files.readAllBytes(filePath);
+    // ✅ Read bytes from URL (for tamper detection)
+    public byte[] readFileBytes(String fileUrl) {
+        try {
+            URL url = new URL(fileUrl);
+            try (InputStream in = url.openStream()) {
+                return in.readAllBytes();
+            }
+        } catch (Exception e) {
+            log.error("Failed to read bytes from URL: {}", fileUrl, e);
+            throw new RuntimeException("Could not read file from storage", e);
         }
     }
 
-    public Path resolveFilePath(String institutionId, String filename) {
-        return Paths.get(uploadDir, institutionId, filename);
-    }
-
-    public String computeSha256(MultipartFile file) throws IOException, NoSuchAlgorithmException {
+    // ✅ SHA256 (unchanged)
+    public String computeSha256(MultipartFile file) throws Exception {
         MessageDigest digest = MessageDigest.getInstance("SHA-256");
         byte[] hash = digest.digest(file.getBytes());
         return HexFormat.of().formatHex(hash);
@@ -84,105 +86,10 @@ public class StorageService {
         return HexFormat.of().formatHex(digest.digest(bytes));
     }
 
-    // ── Local implementation ─────────────────────────────────────────────────
-
-    private String uploadToLocal(MultipartFile file, String institutionId, String storedName) throws IOException {
-        Path uploadPath = Paths.get(uploadDir, institutionId);
-        Files.createDirectories(uploadPath);
-
-        Path targetPath = uploadPath.resolve(storedName);
-        Files.copy(file.getInputStream(), targetPath, StandardCopyOption.REPLACE_EXISTING);
-
-        String fileUrl = "/api/files/" + institutionId + "/" + storedName;
-        log.info("File stored locally: {}", fileUrl);
-        return fileUrl;
-    }
-
-    private void deleteFromLocal(String fileUrl) {
-        try {
-            String relativePath = fileUrl.replace("/api/files/", "");
-            Path filePath = Paths.get(uploadDir, relativePath);
-            Files.deleteIfExists(filePath);
-            log.info("Local file deleted: {}", fileUrl);
-        } catch (IOException e) {
-            log.error("Failed to delete local file: {}", fileUrl, e);
-        }
-    }
-
-    // ── S3 implementation ────────────────────────────────────────────────────
-
-    private String uploadToS3(MultipartFile file, String institutionId, String storedName) throws IOException {
-        ensureS3();
-
-        String s3Key = "documents/" + institutionId + "/" + storedName;
-
-        try (InputStream inputStream = file.getInputStream()) {
-            PutObjectRequest request = PutObjectRequest.builder()
-                    .bucket(s3Bucket)
-                    .key(s3Key)
-                    .contentType(file.getContentType())
-                    .contentLength(file.getSize())
-                    .build();
-
-            s3Client.putObject(request, RequestBody.fromInputStream(inputStream, file.getSize()));
-        }
-
-        String fileUrl = "/api/files/s3/" + s3Key;
-        log.info("File uploaded to S3: s3://{}/{}", s3Bucket, s3Key);
-        return fileUrl;
-    }
-
-    private void deleteFromS3(String fileUrl) {
-        ensureS3();
-
-        try {
-            String s3Key = s3KeyFromUrl(fileUrl);
-
-            s3Client.deleteObject(DeleteObjectRequest.builder()
-                    .bucket(s3Bucket)
-                    .key(s3Key)
-                    .build());
-
-            log.info("S3 file deleted: {}", s3Key);
-        } catch (Exception e) {
-            log.error("Failed to delete S3 file: {}", fileUrl, e);
-        }
-    }
-
-    private byte[] readFromS3(String s3Key) throws IOException {
-        ensureS3();
-
-        try {
-            ResponseInputStream<GetObjectResponse> response =
-                    s3Client.getObject(GetObjectRequest.builder()
-                            .bucket(s3Bucket)
-                            .key(s3Key)
-                            .build());
-
-            return response.readAllBytes();
-        } catch (S3Exception e) {
-            throw new IOException("Failed to read S3 object: " + s3Key, e);
-        }
-    }
-
-    // ── Helpers ──────────────────────────────────────────────────────────────
-
-    private boolean isS3() {
-        return "s3".equalsIgnoreCase(storageMode) && s3Client != null;
-    }
-
-    private void ensureS3() {
-        if (s3Client == null) {
-            throw new IllegalStateException("S3 is not configured but storage.mode=s3");
-        }
-    }
-
-    private String s3KeyFromUrl(String fileUrl) {
-        return fileUrl.replace("/api/files/s3/", "");
-    }
-
-    private String getExtension(String filename) {
-        if (filename == null || !filename.contains(".")) return "";
-        return filename.substring(filename.lastIndexOf('.'));
+    // 🔧 helper
+    private String extractPublicId(String url) {
+        String[] parts = url.split("/");
+        String fileWithExt = parts[parts.length - 1];
+        return fileWithExt.substring(0, fileWithExt.lastIndexOf("."));
     }
 }
